Fix contact container on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -745,6 +745,7 @@ footer{
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        width: 100%;
     }
     .contact-container .card .face.face2{
         transform: translateY(0);
